# bacendata

./: .gitignore  BACENDATA_ESPECIFICACAO.md  CLAUDE.md  Dockerfile  Procfile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
docs/: API.md  PLANO_NEGOCIO.md
frontend/: app.py  requirements.txt
landing/: dashboard.html  docs.html  index.html  robots.txt  sitemap.xml
marketing/: linkedin.md  medium.md  reddit.md
src/bacendata/: __init__.py
src/bacendata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bacendata/api/: app.py
src/bacendata/api/middleware/: rate_limit.py
src/bacendata/api/routes/: auth.py  dashboard.py  health.py  series.py  webhook.py
src/bacendata/core/: config.py  database.py  models.py
src/bacendata/schemas/: series.py
src/bacendata/services/: email.py
src/bacendata/wrapper/: bacen_sgs.py  cache.py  catalogo.py  exceptions.py
tests/: test_api.py  test_wrapper.py
